--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,7 @@
 		<taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path" />
 
 		<delete dir="${ivy.lib.dir}" includes="**/*.*" excludes="local/*.*" />
-		<ivy:retrieve pattern="${ivy.lib.dir}/[conf]/[artifact]-[revision](-[classifier]).[ext]" log="quiet" />
+		<ivy:retrieve pattern="${ivy.lib.dir}/[conf]/[artifact]-[revision](-[classifier]).[ext]" />
 
 		<mkdir dir="${lib.dir}" />
 		<delete dir="${lib.dir}" includes="**/*.*" />
